plugins {
	id 'org.springframework.boot' version '3.5.4' apply false
	id 'io.spring.dependency-management' version '1.1.7' apply false
}

// Common configuration for all projects
allprojects {
	group = 'com.gemmap'
	version = '0.0.1-SNAPSHOT'

	repositories {
		mavenCentral()
	}
}

// Common configuration for all subprojects
subprojects {
	apply plugin: 'java'

	java {
		toolchain {
			languageVersion = JavaLanguageVersion.of(17)
		}
	}

	// Set UTF-8 encoding for Java compilation
	tasks.withType(JavaCompile) {
		options.encoding = 'UTF-8'
	}

	configurations {
		compileOnly {
			extendsFrom annotationProcessor
		}
	}

	tasks.withType(Test) {
		useJUnitPlatform()
	}
}
